--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -14,6 +13,20 @@ form {
     background-color: rgba(211, 211, 211, 0.794);
     padding: 32px 96px;
     border-radius: 8px;
+}
+
+img{
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+}
+
+.logo{
+    width: 120px;
+    height: 120px;
+    border-radius: 120px;
+    top: 0;
+    left: 0;
 }
 
 label, input, select, textarea{
@@ -29,7 +42,7 @@ button{
     height: 40px;
     font-size: 24px;
     color: white;
-    background-color: darkred;
+    background-color: orangered;
     border-radius: 12px;
 }
 
